:wrench: FEAT: Search by name
Search by author name and optimization of menu validation.